# tts_helper

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  PUBLISHING.md  README.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_config.json  test_story.txt
book_extractor/: README.md  __init__.py  __main__.py  epub_extractor.py  markdown_extractor.py  pdf_extractor.py  text_normalizer.py
test_chapters/: chapter1.txt  chapter2.txt  chapter3.txt
tests/: __init__.py  test_book_extractor.py  test_chapter_indicator.py  test_chapter_title_prepending.py  test_command_tts.py  test_kokoro_tts.py  test_kokoro_v1_1.py  test_language_models.py  test_min_chars.py  test_nemo_normalizer.py  test_normalizer.py  test_orpheus_tts.py  test_output_path_resolution.py  test_pydub_stitcher.py  test_pysbd_integration.py  test_segmenter.py  test_segmenter_guarantee.py  test_spacy_segmenter.py  test_stitcher.py  test_text_normalizer.py  test_translation_enhancer.py  test_translation_enhancer_integration.py  test_tts.py
tts_helper/: __init__.py  __main__.py  chapter_indicator.py  chunk.py  command_tts.py  enhancer.py  kokoro_tts.py  language.py  language_models.py  m4b_creator.py  nemo_normalizer.py  normalizer.py  orpheus_tts.py  per_file_process.py  pydub_stitcher.py  segmenter.py  spacy_segmenter.py  stitcher.py  translation_enhancer.py  tts.py
